[package]
name = "grist"
version = "1.2.0"
authors = ["ravi maithrey <maitrey.ind@gmail.com>"]
edition = "2018"
license = "GPL-2.0-or-later"
description = "A way to automate adding, signing and commiting as well as pushing to GitHub"
docs = "https://github.com/ravi-maithrey/grist/DOCUMENTATION.md"
readme = "README.md"
repository = "https://github.com/ravi-maithrey/grist"

[dependencies]
clap = "3.0.0-beta.2"